@fix:;Fixed several rules violations reported by nemo.sonarsource.org